; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_refs.c_git_reference__log_signature.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_refs.c_git_reference__log_signature.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"unknown\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_reference__log_signature(i32** %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32**, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store i32** %0, i32*** %4, align 8
  store i32* %1, i32** %5, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = call i32 @configured_ident(i32** %7, i32* %8)
  store i32 %9, i32* %6, align 4
  %10 = icmp slt i32 %9, 0
  br i1 %10, label %11, label %20

11:                                               ; preds = %2
  %12 = load i32*, i32** %5, align 8
  %13 = call i32 @git_signature_default(i32** %7, i32* %12)
  store i32 %13, i32* %6, align 4
  %14 = icmp slt i32 %13, 0
  br i1 %14, label %15, label %20

15:                                               ; preds = %11
  %16 = call i32 @git_signature_now(i32** %7, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  store i32 %16, i32* %6, align 4
  %17 = icmp slt i32 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %15
  %19 = load i32, i32* %6, align 4
  store i32 %19, i32* %3, align 4
  br label %23

20:                                               ; preds = %15, %11, %2
  %21 = load i32*, i32** %7, align 8
  %22 = load i32**, i32*** %4, align 8
  store i32* %21, i32** %22, align 8
  store i32 0, i32* %3, align 4
  br label %23

23:                                               ; preds = %20, %18
  %24 = load i32, i32* %3, align 4
  ret i32 %24
}

declare dso_local i32 @configured_ident(i32**, i32*) #1

declare dso_local i32 @git_signature_default(i32**, i32*) #1

declare dso_local i32 @git_signature_now(i32**, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
